[package]
name = "test-rust-secp"
version = "0.1.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.secp256k1]
version = "*"
git = "https://github.com/rust-bitcoin/rust-secp256k1.git"
features = ["rand-std", "recovery", "global-context", "serde", "bitcoin_hashes"]


[dependencies]
serde_json = "*"
serde = "*"
bincode = "*"
serde_cbor = "*"
serde_yaml = "*"
rmp-serde = "*"
toml = "*"
serde-pickle = "*"
ron = "*"
bson = "*"
json5 = "*"
flexbuffers = "*"